--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,14 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: property_listings
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
 
 volumes:
-  db_data:
+  postgres_data:
+  redis_data:
